# LazyMath

./: CMakeLists.txt  README.md
cmake/: LazyMathConfig.cmake
examples/: CMakeLists.txt  example-constrained-linear-solver.cc  example-constrained-minimizer.cc  example-linear-solver.cc  example-minimizer.cc
include/LazyMath/: ConjugateGradient.h  Matrix.h  Optimization.h
